<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ante_pcts_id_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_pcts_layout_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/pcts_id"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/ante_pcts_layout_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pcts_id"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_visit_count_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_visit_count_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/anc_no"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <Spinner
                android:id="@+id/ante_visit_count_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_ahsa_name_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_ahsa_layout_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/asha_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/ante_asha_layout_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/asha_name"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_dov_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_dov_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/dov"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/ante_dov_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/dov" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_weight_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_weight_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/weight"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/ante_weight_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_hb_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_hb_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/hb"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/ante_hb_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hb"
                android:inputType="numberDecimal"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_bp_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_bp_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/bloodpressure"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/ante_bp_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/bloodpressure"
                android:inputType="numberDecimal"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_high_risk_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_high_risk_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/high_risk"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <Spinner
                android:id="@+id/ante_high_risk_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_folic_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_folic_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/form_card_internal_padding"

                android:text="@string/folic_acid"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <Spinner
                android:id="@+id/ante_folic_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_folic_weight_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/ante_folic_weight_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/form_card_internal_padding"
                android:text="@string/folic_acid_weight"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <Spinner
                android:id="@+id/ante_folic_weight_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <Button
                android:id="@+id/location_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/location_button"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/font_size_small" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ante_submit_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <Button
                android:id="@+id/ante_submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/submit_button"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>