<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/abortion_pcts_id_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/abortion_pcts_layout_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/pcts_id"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/abortion_pcts_layout_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pcts_id"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abortion_ahsa_name_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/abortion_ahsa_layout_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/asha_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/abortion_asha_layout_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/asha_name"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abortion_abortion_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/abortion_place_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/abortion_place"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/abortion_place_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/abortion_place"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abortion_type_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/abortion_type_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/abortion_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <Spinner
                android:id="@+id/abortion_type_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abortion_date_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/abortion_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/abortion_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />


            <TextView
                android:id="@+id/abortion_date_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/abortion_date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abortion_iud_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/abortion_iud_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/abortion_iud"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />

            <Spinner
                android:id="@+id/abortion_iud_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abortion_iud_date_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <TextView
                android:id="@+id/abortion_iud_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/abortion_iud_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_small" />


            <TextView
                android:id="@+id/abortion_iud_date_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/abortion_iud_date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abortion_submit_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/form_card_padding">

            <Button
                android:id="@+id/abortion_submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="@dimen/form_card_internal_padding"
                android:text="@string/submit_button"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>