<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/antenatal_button"
        android:background="@color/colorPrimary"
        android:padding="@dimen/button_padding"
        android:textColor="@android:color/background_light"
        android:id="@+id/antenatal_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/abortion_button"
        android:background="@color/colorPrimary"
        android:padding="@dimen/button_padding"
        android:textColor="@android:color/background_light"
        android:id="@+id/abortion_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/tetanous_button"
        android:background="@color/colorPrimary"
        android:padding="@dimen/button_padding"
        android:textColor="@android:color/background_light"
        android:id="@+id/tetanous_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />
</androidx.constraintlayout.widget.ConstraintLayout>